--- a/data_structures/vector/Makefile
+++ b/data_structures/vector/Makefile
@@ -1,11 +1,12 @@
 CC = gcc
 CFLAGS = -std=c99 -Wall -Wextra -Wpedantic 
+DEBUGCFLAGS = -fsanitize=address -fsanitize=undefined
 
 .PHONY: all
 all: vector maintest
 
 test: all
-	$(CC) *.o
+	$(CC) $(DEBUGCFLAGS) *.o 
 	@./a.out
 
 vector: vector.c
