--- a/data_structures/vector/Makefile
+++ b/data_structures/vector/Makefile
@@ -1,12 +1,13 @@
 CC = gcc
 CFLAGS = -std=c99 -Wall -Wextra -Wpedantic 
 DEBUGCFLAGS = -fsanitize=address -fsanitize=undefined
+LIBS = -lm
 
 .PHONY: all
 all: vector maintest
 
 test: all
-	$(CC) $(DEBUGCFLAGS) *.o 
+	$(CC) $(DEBUGCFLAGS) $(LIBS) *.o 
 	@./a.out
 
 vector: vector.c
