--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -14,4 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: test all libraries
-      run: make test
+      run: |
+        cmake . -DCMAKE_BUILD_TYPE=Debug
+        make
+        ctest --output-on-failure
