--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles/
+DartConfiguration.tcl
+bin/
+lib/
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+CMakeUserPresets.json
+.cmake
+
 # Prerequisites
 *.d
 
