minor changes to build and updated readme

--- a/vec/CMakeLists.txt
+++ b/vec/CMakeLists.txt
@@ -4,3 +4,4 @@ project(vec DESCRIPTION "dynamically growable vector structure")
 
 add_library(vec STATIC vector.c)
 target_link_libraries(vec PRIVATE m)
+target_compile_features(vec PUBLIC c_std_11)
